--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
 
     <div class="flex">
-        <div class="flex-none w-14 h-14">
+        <div class="flex-none w-14 h-14 text-3xl font-bold">
           01
         </div>
         <div class="flex-initial w-64 ...">
@@ -20,9 +20,9 @@
           03
         </div>
     </div>
-
+    <h1 class="bg-red-500">Ta pegakkdno?</h1>
     <div>
-        <button>entrar</button>
+        <button class="padding 10px">entrar</button>
         <button>sair</button>
     </div>
 </body>
