--- a/src/index.html
+++ b/src/index.html
@@ -6,24 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../dist/output.css" rel="stylesheet">
     <title>Document</title>
+    <link rel="stylesheet" href="/tailwind.css">
 </head>
-<body>
+<body class="bg-gray-50">
 
-    <div class="flex">
-        <div class="flex-none w-14 h-14 text-3xl font-bold">
-          01
+  <!--HEADER-->
+  <div>
+    <div class="container mx-auto px-4 h-38 flex intems-center">
+        <div class="fontt-black">
+              LOGO
         </div>
-        <div class="flex-initial w-64 ...">
-          02
-        </div>
-        <div class="flex-initial w-32 ...">
-          03
-        </div>
+        <ul class="ml-auto">
+          <li>
+            <a href="" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Como reservar</a>
+            <a href="" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">Sobre nos</a>
+            <a href="" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">informaçoes</a>
+            <a href="" class="text-sm text-gray-600 hover:text-gray-800 hover:underline">contaro</a>
+          </li>
+        </ul>
     </div>
-    <h1 class="bg-red-500">Ta pegakkdno?</h1>
-    <div>
-        <button class="padding 10px">entrar</button>
-        <button>sair</button>
-    </div>
+  </div>
+  <!--HEADER-->
+
 </body>
 </html>
