--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@ https://dbsweb.com.br/briefing-site/ -->
   <div>
       <h1>BRIEFING COMPLETO/DETALHADO – MODELO 01</h1>
         <p>ESTRATÉGIA
-          1) Quais são os principais objetivos do site? Informar? Vender? Dar suporte? ...?
+          1) Quais são os principais objetivos do si123te? Informar? Vender? Dar suporte? ...?
           2) Que tipo de site ele é? Puramente promocional? Coletor de Informações? Uma
           publicação? ...?
           3) Quais são as mensagens mais importantes que o site deve passar aos visitantes?
